# sumitChatbot

./: README.md  pyproject.toml
src/sumitchatbot/app/: pdf_to_chroma.py  rag_chatbot.py
src/sumitchatbot/display/: chunks_display.py
src/sumitchatbot/persist/: vectorstore.py
src/sumitchatbot/services/: documentChunk.py  pdf_reader.py
