[project]
name = "sumitchatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "chromadb (>=1.0.16,<2.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "transformers (>=4.55.0,<5.0.0)",
    "accelerate (>=1.10.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "sumitchatbot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
